--- a/src/core/com/dwarfeng/tpnclib/core/resource/defaultres/i18n/logger/default.properties
+++ b/src/core/com/dwarfeng/tpnclib/core/resource/defaultres/i18n/logger/default.properties
@@ -37,6 +37,8 @@ task.dispose.4 = \u8d44\u6e90\u8bfb\u53d6\u5931\u8d25\uff0c\u91cd\u7f6e\u8d44\u6
 task.dispose.5 = \u6a21\u6001\u914d\u7f6e\u6a21\u578b\u5b58\u50a8\u5931\u8d25
 task.dispose.6 = \u4e3b\u754c\u9762\u5916\u89c2\u5bfc\u51fa\u5931\u8d25
 task.dispose.7 = NC\u8bbe\u7f6e\u754c\u9762\u5916\u89c2\u5bfc\u51fa\u5931\u8d25
+task.dispose.8 = \u4e3b\u754c\u9762\u91ca\u653e\u5931\u8d25
+task.dispose.9 = NC\u8bbe\u7f6e\u754c\u9762\u91ca\u653e\u5931\u8d25
 
 task.throwablereport.0 = \u6267\u884c task \u65f6\u9047\u5230\u5f02\u5e38
 task.throwablereport.1 = \u5f02\u5e38\u7684 task \u4fe1\u606f\u5982\u4e0b: %s , \u7c7b: %s
