--- a/src/core/com/dwarfeng/tpnclib/resource/defaultres/i18n/logger/default.properties
+++ b/src/core/com/dwarfeng/tpnclib/resource/defaultres/i18n/logger/default.properties
@@ -24,6 +24,8 @@ task.pose.16 = \u4e3b\u754c\u9762\u542f\u52a8\u5931\u8d25
 task.pose.17 = \u4e3b\u754c\u9762\u5916\u89c2\u5bfc\u5165\u5931\u8d25
 task.pose.18 = NC\u8bbe\u7f6e\u754c\u9762\u542f\u52a8\u5931\u8d25
 task.pose.19 = NC\u8bbe\u7f6e\u754c\u9762\u5916\u89c2\u5bfc\u5165\u5931\u8d25
+task.pose.20 = \u52a0\u8f7d\u8bd5\u4ef6\u7c7b\u522b...
+task.pose.21 = \u8bd5\u4ef6\u7c7b\u522b\u8bfb\u53d6\u5931\u8d25
 task.pose.22 = \u5904\u7406\u5668\u914d\u7f6e\u6587\u4ef6\u8bfb\u53d6\u5931\u8d25
 task.pose.24 = \u5904\u7406\u5668\u5728\u8bfb\u53d6\u914d\u7f6e\u65f6\u9047\u5230\u5f02\u5e38\uff0c\u5904\u7406\u5668\u4fe1\u606f\u5982\u4e0b:
 task.pose.25 = \u952e: %s\uff0c\u7c7b: %s
